--- a/angular/src/app/@thinkam/pilot/menu/menu.component.scss
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.scss
@@ -34,6 +34,11 @@
                     padding: 14px 16px;
                     text-decoration: none;
                 }
+
+                .faca-parte{
+                    color: #FC4FF6
+                }
+
                 .pilot-nav-link:hover {
                     background-color: #111;
                 }
