--- a/angular/src/app/@thinkam/pilot/menu/menu.component.scss
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.scss
@@ -35,7 +35,7 @@
                     text-decoration: none;
                 }
 
-                .faca-parte{
+                .cta{
                     color: #FC4FF6
                 }
 
