add footer + partners + reload

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,1 +1,5 @@
 <devpp-hero></devpp-hero>
+<app-reload></app-reload>
+<app-partners></app-partners>
+<app-form></app-form>
+<app-footer></app-footer>
