--- a/angular/src/app/components/hero/hero.component.scss
+++ b/angular/src/app/components/hero/hero.component.scss
@@ -15,6 +15,7 @@
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
                 padding-top: 150px;
+                font-weight: bold
             }
         }
         h1 {
@@ -24,13 +25,14 @@
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
                 padding-top: 48px;    
-                width: 1000px;
+                width: 1500px;
                 font-size: 64px;  
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 margin-left: auto;
                 margin-right: auto;
+                font-weight: bold
             }
         }
         .purpose {
