add component event-cards

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <devpp-hero></devpp-hero>
 <app-reload></app-reload>
+<app-event-cards></app-event-cards>
 <app-partners></app-partners>
 <app-form></app-form>
 <app-footer></app-footer>
