--- a/angular/src/app/components/form/form.component.html
+++ b/angular/src/app/components/form/form.component.html
@@ -14,6 +14,6 @@
             <option value="">ÁREA DE ATUAÇÃO</option>
         </select>
 
-        <button type="submit">ENVIAR ➡</button>
+        <button type="submit">ENVIAR</button>
     </div>
 </div>
