--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <devpp-hero></devpp-hero>
 <app-reload></app-reload>
 <app-event-cards></app-event-cards>
+<app-digital-media></app-digital-media>
 <app-partners></app-partners>
 <app-form></app-form>
 <app-footer></app-footer>
