--- a/angular/src/app/@thinkam/pilot/menu/menu.component.scss
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.scss
@@ -2,6 +2,13 @@
     background-color: #121214;
     height: 104px;
 
+    .social-icons{
+        img{
+            width: 20px;
+            margin: 14px;
+            margin-top: 29px;
+        }
+    }
     .pilot-container {
         .pilot-navbar-brand {
             display: block;
