--- a/angular/src/app/components/form/form.component.html
+++ b/angular/src/app/components/form/form.component.html
@@ -4,7 +4,12 @@
 
     <p class="conect">Conecte-se também pelo grupo no Telegram, Discord ou Slack</p>
 
-
+    <div class="social-icons">
+        <img class="icons-box" src="../../../assets/images/Logo_one_color/blue/telegram.svg" alt="">
+        <img class="icons-box" src="../../../assets/images/Logo_one_color/blue/slack.svg" alt="">
+        <img class="icons-box" src="../../../assets/images/Logo_one_color/blue/discord_logo.svg" alt="">
+        <img class="icons-box" src="../../../assets/images/Logo_one_color/blue/github.svg" alt="">
+    </div>
     <div class="form">
         <p>Cadastre-se para não perder nenhum conteúdo</p>
         <input type="text" class="input" placeholder="NOME">
