--- a/angular/src/app/@thinkam/pilot/menu/menu.component.html
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.html
@@ -24,5 +24,11 @@
             aria-label="Toggle navigation">
             <span class="pilot-navbar-toggler-icon"></span>
         </button>
+        <div class="social-icons">
+            <img src="../../../../assets/images/Logo_one_color/white/youtube.svg" alt="">
+            <img src="../../../../assets/images/Logo_one_color/white/fb.svg" alt="">
+            <img src="../../../../assets/images/Logo_one_color/white/github.svg" alt="">
+            <img src="../../../../assets/images/Logo_one_color/white/discord.svg" alt="">
+        </div>
     </div>
 </nav>
