--- a/angular/src/app/components/form/form.component.scss
+++ b/angular/src/app/components/form/form.component.scss
@@ -4,9 +4,22 @@
     color: white;
 
     .conect{
-        width: 350px;
+        width: 400px;
     }
 
+    .social-icons{
+        display: flex;
+        flex-direction: row;
+  
+        .icons-box{
+            background: #201E25;
+            width: 48px;
+            height: 48px;
+            margin-top: 26px;
+            margin-right: 30px;
+            padding: 12px;
+        }
+    }
     .form{
         margin-left: 40%;
     }
