--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -1,4 +1,26 @@
 .footer{
     background-color: #000813;
     color: white;
+    padding: 6% 10% 5% 10%;
+    display: grid;
+    grid-template-columns: auto auto;
+    border-top: 1px solid #77A5FA;
+
+    .flex{
+        display: flex;
+        margin-bottom: 100px;
+
+        img{
+            width: 32px;
+            margin-top: -30px;
+            margin-left: 200px;
+        }
+    }
+
+    img{
+        margin-bottom: 10px;
+    }
+    .copyright{
+        color: #514E58;
+    }
 }
