--- a/angular/src/app/components/digital-media/digital-media.component.html
+++ b/angular/src/app/components/digital-media/digital-media.component.html
@@ -5,10 +5,22 @@
             <p>Assista e ouça nosso conteúdo pelos maiores canais de distribuição de podcasts. Só chegar!</p>
         </div>
         <div class="social-icons">
-            <img class="icons-box youtube" src="../../../assets/images/Logos/youtube.png" alt="">
-            <img class="icons-box spotify" src="../../../assets/images/Logos/spotify.png" alt="">
-            <img class="icons-box google" src="../../../assets/images/Logos/google-podcast.png" alt="">
-            <img class="icons-box deezer" src="../../../assets/images/Logos/deezer.png" alt="">
+            <div class="icons-box">
+                <img class="youtube" src="../../../assets/images/Logos/youtube.png" alt="">
+                <p>youtube</p>
+            </div>
+            <div class="icons-box">
+                <img class="spotify" src="../../../assets/images/Logos/spotify.png" alt="">
+                <p>spotify</p>
+            </div>
+            <div class="icons-box">
+                <img class="google" src="../../../assets/images/Logos/google-podcast.png" alt="">
+                <p>google podcast</p>
+            </div>
+            <div class="icons-box">
+                <img class="deezer" src="../../../assets/images/Logos/deezer.png" alt="">
+                <p>deezer</p>
+            </div>
         </div>
     </div>
 </div>   
