--- a/angular/src/app/components/be-part-of-it/be-part-of-it.component.html
+++ b/angular/src/app/components/be-part-of-it/be-part-of-it.component.html
@@ -3,6 +3,6 @@
     <h1>300</h1>
     <h3>Desenvolvedoras e desenvolvedores engajados.</h3>
     <div class="center">
-        <button>Faça parte da comunidade</button>
+        <button>Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
     </div>
 </div>
