--- a/angular/src/app/components/event-cards/event-cards.component.html
+++ b/angular/src/app/components/event-cards/event-cards.component.html
@@ -13,7 +13,7 @@
                         <p class="street">Rua Nicolau Cacciatori, 489</p>
                     </div>
                 </div>
-                <button>Quero participar</button>
+                <button>Quero participar <img src="../../../assets/images/arrow-right.svg" alt=""></button>
             </div>
         </div>
         <div class="card">
@@ -28,7 +28,7 @@
                         <p class="street">Av. Comendador Alberto Bonfiglioli, n° 2700</p>
                     </div>
                 </div>
-                <button>Quero participar</button>
+                <button>Quero participar <img src="../../../assets/images/arrow-right.svg" alt=""></button>
             </div>
         </div>
         <div class="card">
@@ -43,7 +43,7 @@
                         <p class="street">Av. Comendador Alberto Bonfiglioli, n° 2700</p>
                     </div>
                 </div>
-                <button>Quero participar</button>
+                <button>Quero participar <img src="../../../assets/images/arrow-right.svg" alt=""></button>
             </div>
         </div>
     </div>
