--- a/angular/src/app/components/partners/partners.component.html
+++ b/angular/src/app/components/partners/partners.component.html
@@ -27,4 +27,5 @@
             <p>novo parceiro</p>
         </div>
     </div>
+    <button>Apoie a comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
 </div>
