--- a/angular/src/app/components/reload/reload.component.html
+++ b/angular/src/app/components/reload/reload.component.html
@@ -4,7 +4,7 @@
         <div>
             <p>Para a retomada da comunidade estamos preparando algumas novidades. Além dos meetups vamos promover semanalmente um videocast com convidados especiais. <font color="#FC4FF6">Fique ligado </font> 🤟</p>
     
-            <button>Faça parte da comunidade</button>
+            <button>Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
         </div>
 
         <div>
