--- a/angular/src/app/components/form/form.component.scss
+++ b/angular/src/app/components/form/form.component.scss
@@ -4,25 +4,57 @@
     padding-bottom: 5%;
     color: white;
 
-    .conect{
-        width: 400px;
-    }
+    display: grid;
+    grid-template-columns: auto auto;
 
-    .social-icons{
-        display: flex;
-        flex-direction: row;
-  
-        .icons-box{
-            background: #201E25;
-            width: 48px;
-            height: 48px;
-            margin-top: 26px;
-            margin-right: 30px;
-            padding: 12px;
+    .title-icons{
+        .title{
+            background: linear-gradient(91.06deg, #FF1CF7 2.26%, #00F0FF 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-fill-color: transparent;
+
+            font-weight: 700;
+            font-size: 40px;
+            line-height: 130%;
+
+            /* or 52px */
+            letter-spacing: 0.02em;
         }
-    }
+
+        .conect{
+            width: 400px;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 130%;
+            letter-spacing: 0.72px;
+        }
+
+        .social-icons{
+            display: flex;
+            flex-direction: row;
+    
+            .icons-box{
+                background: #201E25;
+                width: 48px;
+                height: 48px;
+                margin-top: 26px;
+                margin-right: 30px;
+                padding: 12px;
+            }
+        }
+}
     .form{
-        margin-left: 40%;
+        margin-left: 200px;
+
+        p{
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 33px;
+            letter-spacing: 0.72px;
+            margin-bottom: 74px;
+        }
     }
 }
 
@@ -36,6 +68,7 @@ input{
     width: 586px;
     height: 60px;
 
+    border: none;
     background: rgba(32, 30, 37, 0.4);
     border-bottom: 2px solid #485DFF;
     border-radius: 2px;
