--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -25,7 +25,7 @@
             justify-content: center;
             align-items: center;
             border-radius:  0px 30px ;
-            margin: 30px 30px 30px 0;
+            margin: 40px 40px 40px 0;
             color: white;
             p{
                 text-transform: uppercase;
@@ -43,5 +43,17 @@
 
             // }
         }
+    }
+    button{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 16px 24px;
+        gap: 30px;
+        background-color: transparent;
+        border: 1px solid #FFFFFF;
+        border-radius: 2px;
+        color: #FFFFFF;
     }
 }
