--- a/angular/src/app/components/reload/reload.component.html
+++ b/angular/src/app/components/reload/reload.component.html
@@ -8,13 +8,13 @@
         </div>
 
         <div>
-            <h2> <img src="../../../assets/images/meetupsector.png" alt="">
+            <h2> <img class="icons-box" src="../../../assets/images/meetupsector.png" alt="">
                 Meetups</h2>
             <p>Um encontro informal em que as pessoas conversam de pé, facilitando a circulação e o networking. A ideia vem do Vale do Silício, em que eventos como esse são tão comuns quanto um happy-hour. <font color="#7589FF"> Faça parte da comunidade.</font></p>
         </div>
     </div>
         <div class="divpodcast">
-            <h2> <img src="../../../assets/images/micpodcast.svg" alt="">
+            <h2> <img class="icons-box" src="../../../assets/images/micpodcast.svg" alt="">
                 Podcast</h2>
             <p>Como um programa de rádio, porém o conteúdo é sob demanda e pode ser ouvido no momento em que o ouvinte quiser. O formato tem uma alta potência de comunicação, que pode levar informação, educação, entretenimento e mais, ou seja: não existe limite para a criatividade. <font color="#7589FF">Faça parte da comunidade.</font> </p>
         </div>
