--- a/angular/src/app/components/be-part-of-it/be-part-of-it.component.html
+++ b/angular/src/app/components/be-part-of-it/be-part-of-it.component.html
@@ -1,8 +1,10 @@
 <div class="be-part">
-    <h2>SOMOS MAIS DE</h2>
-    <h1>300</h1>
-    <h3>Desenvolvedoras e desenvolvedores engajados.</h3>
-    <div class="center">
-        <button>Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
+    <div>
+        <h2>SOMOS MAIS DE</h2>
+        <h1>300</h1>
+        <h3>Desenvolvedoras e desenvolvedores engajados.</h3>
+        <div class="center">
+            <button>Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
+        </div>
     </div>
 </div>
