--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -1,59 +1,66 @@
 .partners{
-    background-color: #000813;
-    padding-left: 240px;
-    h1{
-        letter-spacing: 0.16em;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 40px;
-        background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 80.78%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        text-fill-color: transparent;
-        
+    .partners-container{
+        padding-left: 240px;
+        h1{
+            letter-spacing: 0.16em;
+            text-transform: uppercase;
+            font-weight: 700;
+            font-size: 40px;
+            background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 80.78%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-fill-color: transparent;
+            
+        }
+        .grid{
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            .card{
+                background-color: #201E25;
+                height: 152px;
+                width: 324px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                border-radius:  0px 30px ;
+                margin: 40px 40px 40px 0;
+                color: white;
+                p{
+                    text-transform: uppercase;
+                    background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 80.78%);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                    background-clip: text;
+                    text-fill-color: transparent;
+                    font-weight: 700;
+                    font-size: 24px;
+                    line-height: 130%;
+                    letter-spacing: 0.16em;
+                }
+                // img{
+
+                // }
+            }
+        }
     }
-    .grid{
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        .card{
-            background-color: #201E25;
-            height: 152px;
-            width: 324px;
+        .center{
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            border-radius:  0px 30px ;
-            margin: 40px 40px 40px 0;
-            color: white;
-            p{
-                text-transform: uppercase;
-                background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 80.78%);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-                background-clip: text;
-                text-fill-color: transparent;
-                font-weight: 700;
-                font-size: 24px;
-                line-height: 130%;
-                letter-spacing: 0.16em;
-            }
-            // img{
-
-            // }
+        }
+        button{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 16px 24px;
+            gap: 30px;
+            background-color: transparent;
+            border: 1px solid #FFFFFF;
+            border-radius: 2px;
+            color: #FFFFFF;
         }
     }
-    button{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 16px 24px;
-        gap: 30px;
-        background-color: transparent;
-        border: 1px solid #FFFFFF;
-        border-radius: 2px;
-        color: #FFFFFF;
-    }
-}
