--- a/angular/src/app/components/be-part-of-it/be-part-of-it.component.html
+++ b/angular/src/app/components/be-part-of-it/be-part-of-it.component.html
@@ -1,5 +1,5 @@
 <div class="be-part">
-    <div>
+    <div class="be-part-container">
         <h2>SOMOS MAIS DE</h2>
         <h1>300</h1>
         <h3>Desenvolvedoras e desenvolvedores engajados.</h3>
