--- a/angular/src/app/components/form/form.component.scss
+++ b/angular/src/app/components/form/form.component.scss
@@ -1,5 +1,5 @@
 .form-section{
-    padding-left: 15%;
+    padding-left: 252px;
     padding-bottom: 5%;
     color: white;
 
@@ -17,6 +17,7 @@
             font-weight: 700;
             font-size: 40px;
             line-height: 130%;
+            margin-bottom: 82px;
 
             /* or 52px */
             letter-spacing: 0.02em;
