--- a/angular/src/app/components/digital-media/digital-media.component.scss
+++ b/angular/src/app/components/digital-media/digital-media.component.scss
@@ -3,9 +3,8 @@
     
     .container{
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center; 
+        margin-left: 363px;
+        margin-bottom: 272px;
 
         h1{
             font-weight: 700;
@@ -27,7 +26,7 @@
             font-size: 16px;
             line-height: 140%;
             letter-spacing: 0.72px;
-            width: 292px;
+            width: 296px;
         }
 
         .social-icons{
@@ -43,7 +42,7 @@
                 background: #201E25;
                 border-radius: 16px;
                 height: 180px;
-                margin: 40px;
+                margin: 20px;
 
                 p{
                     text-transform: uppercase;
@@ -63,10 +62,11 @@
                     width: 80px;
                 }
                 .google{
-                    width: 60px;
+                    width: 64px;
                 }
                 .deezer{
-                    width: 50px;
+                    width: 72px;
+                    height: 52px;
                 }
             }
 
