--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -6,16 +6,16 @@
             text-transform: uppercase;
             font-weight: 700;
             font-size: 40px;
-            background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 80.78%);
+            background: linear-gradient(91.06deg, #ffffff 2.26%, #7589FF 20.78%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            background-clip: text;
-            text-fill-color: transparent;
-            
+            background-clip: text;     
+            margin-bottom: 66px;       
         }
         .grid{
             display: grid;
             grid-template-columns: auto auto auto auto;
+            margin-left: -20px;
             .card{
                 background-color: #201E25;
                 height: 152px;
@@ -25,7 +25,7 @@
                 justify-content: center;
                 align-items: center;
                 border-radius:  0px 30px ;
-                margin: 40px 40px 40px 0;
+                margin: 20px 20px 20px 20px;
                 color: white;
                 p{
                     text-transform: uppercase;
@@ -62,5 +62,7 @@
             border: 1px solid #FFFFFF;
             border-radius: 2px;
             color: #FFFFFF;
+            margin-bottom: 204px;
+            margin-top: 64px;
         }
     }
