--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -66,3 +66,16 @@
             margin-top: 64px;
         }
     }
+
+@media screen and (max-width: 600px) {
+    .partners{
+        .partners-container{
+            padding-left: 24px;
+
+            .grid{
+                    display: grid;
+                    grid-template-columns: auto;
+                }
+            }
+        }   
+    }
