--- a/angular/src/app/components/form/form.component.scss
+++ b/angular/src/app/components/form/form.component.scss
@@ -109,3 +109,14 @@ button{
     color: white;
     border: none;
 }
+
+@media screen and (max-width: 600px) {
+    .form-section{
+        padding-left: 24px;
+        padding-bottom: 5%;
+        grid-template-columns: auto;
+        .form{
+            margin-left: 12px;
+        }
+    }
+}
